--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Página web</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilosIndex.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -106,8 +107,10 @@
                 </div>
         </div>
         <div class="line"></div>
+
     </footer>
+    
     <script src="js/menu.js"></script>
-    <script src="js/lightbox.js"></script>
+    <script src="js/lightboxAndJquery.js"></script>
 </body>
 </html>
